[package]

name = "uni"
version = "0.0.1"
authors = ["Baptiste Covolato"]
build = "build.rs"

[build-dependencies]
gcc = "0.3.20"

[features]

default = [ "rlibc", "spin", "alloc", "collections", "intrusive", "alloc_uni" ]

xen = [ "with-core" ]
with-core = [
    "core",
    "rlibc/with-core",
    "spin/with-core",
    "alloc/with-core",
    "collections/with-core",
    "intrusive/with-core",
    "alloc_uni/with-core"
]

[dependencies]

rlibc = { path = "deps/rlibc", optional = true }
spin = { path = "deps/spinlock-rs", optional = true }
alloc = { path = "rust-libs/alloc", optional = true }
collections = { path = "rust-libs/collections", optional = true }
intrusive = { path = "crates/intrusive", optional = true }
alloc_uni = { path = "crates/alloc_uni", optional = true }

core = { path = "rust-libs/core", optional = true }

[[example]]
name = "hello"
path = "examples/hello/main.rs"

[[example]]
name = "thread"
path = "examples/thread/main.rs"

[[example]]
name = "queue"
path = "examples/thread/queue.rs"

[[example]]
name = "echo"
path = "examples/console/echo.rs"
