[package]

name = "uni"
version = "0.0.1"
authors = ["Baptiste Covolato"]
build = "build.rs"

[build-dependencies]
gcc = "0.3.20"

[features]

test = [ "rlibc/test", "spin/test", "intrusive/test" ]

xen = [
    "rlibc/with-core",
    "spin/with-core",
    "intrusive/with-core",
    "alloc_uni/with-core",
    "alloc",
    "collections",
    "rust-libcore"
]
virtio = []

net = []

[dependencies]

clippy = { version = "*", optional = true }

rlibc = { path = "deps/rlibc", optional = true }
spin = { path = "deps/spinlock-rs", optional = true }

intrusive = { path = "crates/intrusive", optional = true }
alloc_uni = { path = "crates/alloc_uni", optional = true  }

alloc = { path = "rust-libs/alloc", optional = true }
collections = { path = "rust-libs/collections", optional = true }

rust-libcore = { version = "*", optional = true }

[[example]]
name = "hello"
path = "examples/hello/main.rs"

[[example]]
name = "thread"
path = "examples/thread/main.rs"

[[example]]
name = "queue"
path = "examples/thread/queue.rs"

[[example]]
name = "echo"
path = "examples/console/echo.rs"

[[example]]
name = "store"
path = "examples/xen/store.rs"

[[example]]
name = "udp-echo"
path = "examples/net/udp-echo.rs"
