[package]

name = "alloc_uni"
version = "0.0.1"
authors = ["Baptiste Covolato"]

[features]

default = [ "spin", "heap" ]
with-core = [ "core", "spin/with-core", "heap/with-core" ]

[dependencies]

spin = { path = "../../src/deps/spinlock-rs", optional = true }
heap = { path = "../heap", optional = true }

core = { path = "../../src/rust-libs/core", optional = true }
