[package]

name = "alloc_uni"
version = "0.0.1"
authors = ["Baptiste Covolato"]

[features]

test = [ "spin/test", "heap/test" ]

with-core = [ "spin/with-core", "heap/with-core", "rust-libcore" ]

[dependencies]

spin = { path = "../../deps/spinlock-rs", optional = true }
heap = { path = "../heap", optional = true }

rust-libcore = { version = "*", optional = true }
