[package]

name = "uni"
version = "0.0.1"
authors = ["Baptiste Covolato"]


[dependencies]

core = { path = "../rust-libs/core" }
collections = { path = "../rust-libs/collections" }
alloc = { path = "../rust-libs/alloc" }
intrusive = { path = "../libintrusive", features = [ "with-core" ] }
spin = { path = "../deps/spinlock-rs" }
alloc_uni = { path = "../liballoc_uni" }
xen = { path = "../libxen", features = [ "with-core" ] }
