[package]

name = "uni"
version = "0.0.1"
authors = ["Baptiste Covolato"]
build = "build.rs"

[build-dependencies]
gcc = "0.3.20"

[features]

default = [ "spin", "alloc", "collections", "intrusive", "alloc_uni" ]
with-core = [
    "core",
    "spin/with-core",
    "alloc/with-core",
    "collections/with-core",
    "intrusive/with-core",
    "alloc_uni/with-core"
]

[dependencies]

spin = { path = "../deps/spinlock-rs", optional = true }
alloc = { path = "../rust-libs/alloc", optional = true }
collections = { path = "../rust-libs/collections", optional = true }
intrusive = { path = "../libintrusive", optional = true }
alloc_uni = { path = "../liballoc_uni", optional = true }

core = { path = "../rust-libs/core", optional = true }
